--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,5 +1,10 @@
 Changelog
 =========
+1.0 (2012-08-06)
+----------------
+- Added i18n support for the UI: translation for "Show Navigation" and "Hide navigation" in Dutch and French. [kysr]
+
+- Always show correct navigation label in mobile menu [kysr]
 
 0.0.1 (2013-08-05)
 ------------------
